k8s/auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-db
  labels:
    app: auth-server-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server-db
  template:
    metadata:
      labels:
        app: auth-server-db
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: auth-server-db-storage
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "$(POSTGRES_USER)"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: auth-server-db-storage
        persistentVolumeClaim:
          claimName: auth-server-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server-db
spec:
  selector:
    app: auth-server-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: europe-central2-docker.pkg.dev/${PROJECT_ID}/whatsapp-clone/auth-server:${TAG}
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "700Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
  - port: 8090
    targetPort: 8090
  type: LoadBalancer
