k8s/eurekaserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: gcr.io/${PROJECT_ID}/eurekaserver:${TAG}
        ports:
        - containerPort: 8070
        resources:
          limits:
            memory: "700Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8070
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8070
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver
spec:
  selector:
    app: eurekaserver
  ports:
  - port: 8070
    targetPort: 8070
  type: ClusterIP
